Fixed alignment issue

--- a/src/renderer/style.less
+++ b/src/renderer/style.less
@@ -1187,17 +1187,17 @@ body[platform="darwin"] .app-chrome .app-chrome-item > .window-controls > div.cl
 
   .lossless-icon {
     background-image: url("./assets/lossless.svg") !important;
-    right: 0;
+    right: 0px;
   }
 
   .ppe-icon {
     background-image: url("./assets/ppe.svg") !important;
-    right: 0;
+    right: 0px;
   }
 
   .private-icon {
     background-image: url("./assets/private.svg") !important;
-    left: 3;
+    left: 3px;
   }
 
   .audio-type {
